blog post_detail 뷰 구현

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,38 +1,6 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="utf8" />
-<title>AskDjango blog</title>
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
-<style>
-body {
-    padding-top: 60px;
-}
-</style>
-</head>
-<body>
+{% extends "blog/base.html" %}
 
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Project name</a>
-            </div>
-            <div id="navbar" class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </div><!--/.nav-collapse -->
-        </div>
-    </nav>
-
+{% block content %}
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
@@ -42,20 +10,15 @@ body {
                             <img src="{{ post.photo.url }}" style="max-width: 100px;" />
                         </div>
                         <div class="media-body">
-                            <h4>{{ post.title }}</h4>
+                            <h4>
+                                <a href="{% url "blog:post_detail" post.pk %}">
+                                    {{ post.title }}
+                                </a>
+                            </h4>
                         </div>
                     </div>
                 {% endfor %}
             </div>
         </div>
     </div>
-
-</body>
-</html>
-
-
-
-
-
-
-
+{% endblock %}
