--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -14,7 +14,18 @@
                     </div>
                     <div class="panel-footer">
                         <a href="{% url "blog:post_list" %}" class="btn btn-default">목록</a>
+                        <a href="{% url "blog:comment_new" post.pk %}" class="btn btn-primary">댓글달기</a>
                     </div>
+                </div>
+
+                <div id="comment_list">
+                {% for comment in post.comment_set.all %}
+                <div class="media">
+                    <div class="media-body">
+                        {{ comment.memssage }}
+                    </div>
+                </div>
+                {% endfor %}
                 </div>
             </div>
         </div>
